Comments in jupyter notebook

--- a/Workshop/Standard NLP Approach  v2.ipynb
+++ b/Workshop/Standard NLP Approach  v2.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "### Before we start\n",
     "\n",
-    "- all files and information you'll find in this Github Repository : https://github.com/roxytomanek/ai_workshop\n",
+    "- You can find all files and information in this Github Repository : https://github.com/roxytomanek/ai_workshop\n",
     "\n",
     "### What are we going to achieve\n",
     "\n",
@@ -32,11 +32,11 @@
     "### I. Importinig libraries\n",
     "\n",
     "- **NumPy** - package for scientific computing; it provides support for large, multi-dimensional arrays and matrices, along with a large collection of high-level mathematical functions to operate on these arrays\n",
-    "- **Pandas** - we'll use this library for data manipulation and analysis; it offers data structures and operations for manipulating numerical tables and time series\n",
-    "- **Matplotlib** - is a plotting library for the Python programming language and its numerical mathematics extension NumPy. And **Pyplot** is a Matplotlib module which provides a MATLAB-like interface but it's free and open-source\n",
-    "- **Seaborn** - is also data visualization library based on matplotlib. It provides a high-level interface for drawing attractive and informative statistical graphics.\n",
-    "- **Scikit-learn** (sklearn) is a free software machine learning library. It features various classification, regression and clustering algorithms including support vector machines, random forests, gradient boosting, k-means and DBSCAN, and is designed to interoperate with the Python numerical and scientific libraries NumPy and SciPy.\n",
-    "- **Pickle** - The pickle module implements binary protocols for serializing and de-serializing a Python object structure. “Pickling” is the process whereby a Python object hierarchy is converted into a byte stream.\n",
+    "- **Pandas** - we use this library for data manipulation and analysis; it offers data structures and operations for manipulating numerical tables and time series\n",
+    "- **Matplotlib** - is a plotting library for the Python programming language and a numerical mathematics extension NumPy. Also **Pyplot** is a Matplotlib module which provides a MATLAB-like interface but it's free and open-source\n",
+    "- **Seaborn** - is a data visualization library based on matplotlib. It provides a high-level interface for drawing attractive and informative statistical graphics.\n",
+    "- **Scikit-learn** (sklearn) is a free software machine learning library. It features various classification, regression and clustering algorithms including support vector machines, random forests, gradient boosting, k-means and DBSCAN, it's also designed to interoperate with the Python numerical and scientific libraries NumPy and SciPy.\n",
+    "- **Pickle** - The pickle module implements binary protocols for serializing and de-serializing a Python object structure. “Pickling” is the process where a Python object hierarchy is converted into a byte stream.\n",
     " "
    ]
   },
@@ -61,13 +61,20 @@
    "source": [
     "### II. Downloading the dataset\n",
     "\n",
-    "The first step to any data science project is to import your data. Often, you'll work with data in Comma Separated Value (CSV) files and run into problems at the very start of your workflow. We're using `read_csv()` function from `pandas`. In the round brackets, you can use arguments to adjust the process to your needs. In this case, we're using `delimiter` and `encoding`, all the possibilities you'll find in the documentation.\n",
+    "The first step to any data science project is to import your data. Often, you'll work with data in Comma Separated Value (CSV) files and run into problems at the very beggining of your workflow. To load a csv file we're often using `read_csv()` function from `pandas`. In the round brackets, you can use arguments to adjust the process to your needs. In this case, we're using `delimiter` and `encoding`, all of the possibilities you can find in the documentation.\n",
     "\n",
-    "If you want to see how the DataFrame looks like try:\n",
+    "If you want to see how the DataFrame looks like you can try using this commands:\n",
     "\n",
-    "- `df.head(10)` - using this command you'll see fist 10 rows of the DataFrame\n",
-    "- `df.tail(10)` - this one will show yoy the last 10 rows"
+    "- `df.head(10)` - this command will show you the fist 10 rows of the DataFrame\n",
+    "- `df.tail(10)` - this one will show you the last 10 rows"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -85,7 +92,7 @@
    "source": [
     "### III. Summarize the Dataset\n",
     "\n",
-    "Now we need to look at the data ... \n",
+    "Now we need to look at the data following this 3 steps:\n",
     "\n",
     "1. Dimensions of the dataset.\n",
     "2. Statistical summary of all attributes.\n",
@@ -153,7 +160,7 @@
    "metadata": {},
    "source": [
     "#### Class Distribution\n",
-    "Let’s now take a look at the number of instances (rows) that belong to each class. We can view this as an absolute count."
+    "Now let's take a look at the number of instances (rows) that belong to each class. We can view this as an absolute count."
    ]
   },
   {
@@ -172,7 +179,7 @@
    "source": [
     "### IV. Data Visualization\n",
     "\n",
-    "After the explortory analysis we have a basic idea about the data, but it's always easier to see in ina a picture :) \n",
+    "After the explortory analysis we now have a basic idea about the data, but it's always easier to see it in a graph :) \n",
     "\n",
     " "
    ]
@@ -262,14 +269,26 @@
    "source": [
     "#### Creating train and test datasets\n",
     "\n",
-    "To evaluate the model we're going to split it into two parts, one is for training and the second for testing. In this step we're using `train_test_split` function. We will be splited with the `test_size=0.3` that's meant that 70% of data we will use to train our models and 20% that we will hold back as a validation dataset. `random_state` as the name suggests, is used for initializing the internal random number generator, which will decide the splitting of data into train and test indices in your case. Setting `random_state` a fixed value will guarantee that same sequence of random numbers are generated each time you run the code. And unless there is some other randomness present in the process, the results produced will be same as always. This helps in verifying the output. We're setting it to `123`"
+    "To evaluate the model we're going to split it into two parts, one is for training and the second for testing. In this step we're using `train_test_split` function. It will be splited with the `test_size=0.3`, it means we will use 70% of data to train our models and 30% we will hold back as a validation dataset. `random_state` as the name suggests, is used for initializing the internal random number generator, which will decide the splitting of data into train and test indices in your case. Setting `random_state`, a fixed value, will guarantee that same sequence of random numbers will be generated each time you run the code. And unless there is some other randomness present in the process, the results produced will be same as always. This helps in verifying the output. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_test_split' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-149c20d32258>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Split Data Set into Train and Test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mText\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLabel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m123\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_test_split' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Split Data Set into Train and Test\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(df.Text, df.Label, test_size=0.3, random_state=123)"
@@ -281,7 +300,7 @@
    "source": [
     "#### MODELS\n",
     "\n",
-    "Now the fun begins! In this step, we'll run three different models and see the results for each of them. Here you'll also is a task for you - in the cell below we dined these three models and your job is to rerun cell with each of them. \n",
+    "Now the fun begins! In this step, we'll run three different models and see the results for each of them. Here is a simple task for you - in the cell below we definned these three models and your job is to rerun the cell with each of them. \n",
     "\n",
     "But before we'll do it - some brief models explanation:\n",
     "\n",
@@ -318,7 +337,7 @@
    "source": [
     "#### Instruction\n",
     "\n",
-    "Now your task! In lines **18-20** inside a function are 3 models defindned, and only one of them is active. To see results for each of them add or remove `#` in the beginning of the line. "
+    "Now your task! In lines **18-20** inside a function are 3 models definned, and only one of them is active. To see results for each of them add or remove `#` in the beginning of the line. "
    ]
   },
   {
@@ -366,17 +385,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the above cell we have only numerical output, so for makinig it easier to understand we'll visualise it and we'll create **confusion matrix**\n",
+    "In the cell above we only have numerical output, so for making it easier to understand we'll visualise it and create **confusion matrix**\n",
     "\n",
     "A confusion matrix is a table that is often used to describe the performance of a classification model (or \"classifier\") on a set of test data for which the true values are known.\n",
     "What can we learn from this matrix?\n",
-    "- There are two possible predicted classes: \"yes\" and \"no\". If we were predicting the presence of a disease, for example, \"yes\" would mean they have the disease, and \"no\" would mean they don't have the disease.\n",
+    "- There are two possible predicted classes: \"spam\" and \"ham\". In this case if we are predicting the purpose of a message, \"spam\" means that it's a spam message, and \"ham\" is for normal messages.\n",
     "\n",
-    "<br>Let's now define the most basic terms, which are whole numbers (not rates):\n",
-    "- true positives (TP): These are cases in which we predicted yes (they have the disease), and they do have the disease.\n",
-    "- true negatives (TN): We predicted no, and they don't have the disease.\n",
-    "- false positives (FP): We predicted yes, but they don't actually have the disease. (Also known as a \"Type I error.\")\n",
-    "- false negatives (FN): We predicted no, but they actually do have the disease. (Also known as a \"Type II error.\")\n",
+    "<br>Let's now define the most basic terms:\n",
+    "- true positives (TP): These are the cases in which we predicted \"ham\" (important message).\n",
+    "- true negatives (TN): We found \"spam\".\n",
+    "- false positives (FP): We predicted ham, but it's actually spam. (Also known as a \"Type I error.\")\n",
+    "- false negatives (FN): We predicted spam, but they are actually imporant messages. (Also known as a \"Type II error.\")\n",
     "<br>\n",
     "\n",
     "\n",
