slides and notbook updated

--- a/Workshop/Standard NLP Approach.ipynb
+++ b/Workshop/Standard NLP Approach.ipynb
@@ -74,13 +74,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Load Data\n",
     "df = pd.read_csv('./data/spam_or_ham.csv', delimiter=',', encoding='latin-1')"
@@ -483,7 +476,12 @@
    "metadata": {},
    "source": [
     "### Pickle\n",
-    "????"
+    "\n",
+    "Pickle is used for serializing and de-serializing Python object structures, also called marshalling or flattening. Serialization refers to the process of converting an object in memory to a byte stream that can be stored on disk or sent over a network. Later on, this character stream can then be retrieved and de-serialized back to a Python object. Pickling is not to be confused with compression! The former is the conversion of an object from one representation (data in Random Access Memory (RAM)) to another (text on disk), while the latter is the process of encoding data with fewer bits, in order to save disk space.\n",
+    "\n",
+    "Pickling is useful for applications where you need some degree of persistency in your data. Your program's state data can be saved to disk, so you can continue working on it later on. It can also be used to send data over a Transmission Control Protocol (TCP) or socket connection, or to store python objects in a database. Pickle is very useful for when you're working with machine learning algorithms, where you want to save them to be able to make new predictions at a later time, without having to rewrite everything or train the model all over again.\n",
+    "\n",
+    "Useful: https://www.pythoncentral.io/how-to-pickle-unpickle-tutorial/"
    ]
   },
   {
@@ -506,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Some testing "
+    "### Let's test the results "
    ]
   },
   {
